* Fixed bug in FlowPhaseListener that resulted in a NPE on a flow that started and ended in the same request (SWF-273).

Package org.springframework.webflow.test
* Added constructor taking test name argument to AbstractFlowExecutionTests, AbstractExternalizedFlowExecutionTests
  and AbstractXmlFlowExecutionTests.

Package org.springframework.webflow.samples
* Made all samples Spring IDE 2.0 projects for use with the Spring Web Flow Graphical Editor and XML Flow
  Definition Editor out of the box. To use these features, import the sample projects into Eclipse 3.2.2 with
  WTP 1.5.3 and Spring IDE 2.0 M3 or greater installed (See http://springide.org).
* Featured alternate versions of "ItemList" and "Sellitem" flows more prominently.
* Enhanced the JSF-based version of SellItem to take advantage of the latest simplifications in Spring Web Flow's
  JSF support. Please see this sample along with the practical section in the reference manual for illustrations
  of how to use Spring Web Flow in a JSF environment.
* Greatly enhanced sample walkthrough documentation in 'practical' section of reference manual (special thanks to
  Rossen Stoyanchev who contributed this).

Changes in version 1.0.1 (08.01.2007)
-------------------------------------

General
* In Ivy, JUnit is no longer a default dependency. There is now a new 'testing' configuration that
  includes JUnit as a dependency (SWF-213).

Package org.springframework.webflow.action
* FormAction methods getFormObject and getFormErrors are no longer final (SWF-222).
* When FormAction detects that the existing Errors instance is invalid, it will now copy over
  existing field and object errors to the newly created Errors instance (SWF-219).

Package org.springframework.webflow.config
* Added get/setMaxConversations and get/setMaxContinuations methods to FlowExecutorFactoryBean. Also
  added corresponding configuration abilities to the config schema (SWF-210).